<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.txusballesteros.widgets.FitChart
            android:id="@+id/timelineChart"
            android:layout_width="300dp"
            android:layout_height="300dp"
            android:layout_marginTop="30dp"
            app:animationMode="linear"
            app:backStrokeColor="@color/background"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:strokeSize="15dp" />

        <TextView
            android:id="@+id/currentRoundName"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/blinker_semibold"
            android:text="@string/defaultRoundName"
            android:textAlignment="center"
            android:textColor="@color/textWhite"
            android:textSize="30sp"
            app:layout_constraintBottom_toBottomOf="@+id/timelineChart"
            app:layout_constraintEnd_toEndOf="@+id/timelineChart"
            app:layout_constraintStart_toStartOf="@+id/timelineChart"
            app:layout_constraintTop_toTopOf="@+id/timelineChart" />


        <HorizontalScrollView
            android:id="@+id/horizontalScrollView"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginBottom="50dp"
            android:scrollbars="none"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <LinearLayout
                    android:id="@+id/timelinell12"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="150dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:gravity="bottom"
                        android:text="Snacks"
                        android:textColor="#FFFFFF"
                        android:textSize="24sp"
                        android:visibility="invisible" />

                    <TextView
                        android:layout_width="150dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:gravity="top"
                        android:text="Snack"
                        android:textColor="#FFFFFF"
                        android:textSize="18sp"
                        android:visibility="invisible" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/timelinell1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="150dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="bottom"
                        android:text="Arrival"
                        android:textAlignment="center"
                        android:textColor="#748290"
                        android:textSize="22sp" />

                    <TextView
                        android:layout_width="150dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:gravity="top"
                        android:text="7:00 PM"
                        android:textAlignment="center"
                        android:textColor="#3D4C5C"
                        android:textSize="16sp" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/timelinell2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="150dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:gravity="bottom"
                        android:text="@string/roundOne"
                        android:textAlignment="center"
                        android:textColor="#748290"
                        android:textSize="22sp" />

                    <TextView
                        android:layout_width="150dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:gravity="top"
                        android:text="9:00 PM"
                        android:textAlignment="center"
                        android:textColor="#3D4C5C"
                        android:textSize="16sp" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/timelinell3"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="150dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:gravity="bottom"
                        android:text="@string/pizza"
                        android:textAlignment="center"
                        android:textColor="#748290"
                        android:textSize="22sp" />

                    <TextView
                        android:layout_width="150dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:gravity="top"
                        android:text="12:00 AM"
                        android:textAlignment="center"
                        android:textColor="#3D4C5C"
                        android:textSize="16sp" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/timelinell4"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="150dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:gravity="bottom"
                        android:text="@string/roundTwo"
                        android:textAlignment="center"
                        android:textColor="#748290"
                        android:textSize="22sp" />

                    <TextView
                        android:layout_width="150dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:gravity="top"
                        android:text="2:00AM"
                        android:textAlignment="center"
                        android:textColor="#3D4C5C"
                        android:textSize="16sp" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/timelinell5"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:focusable="true"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="150dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:gravity="bottom"
                        android:text="@string/funEvent"
                        android:textAlignment="center"
                        android:textColor="#748290"
                        android:textSize="22sp" />

                    <TextView
                        android:layout_width="150dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:gravity="top"
                        android:text="6:00 AM"
                        android:textAlignment="center"
                        android:textColor="#3D4C5C"
                        android:textSize="16sp" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/timelinell6"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="150dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:gravity="bottom"
                        android:text="@string/breakfast"
                        android:textAlignment="center"
                        android:textColor="#748290"
                        android:textSize="22sp" />

                    <TextView
                        android:layout_width="150dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:gravity="top"
                        android:text="9:00 AM"
                        android:textAlignment="center"
                        android:textColor="#3D4C5C"
                        android:textSize="16sp" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/timelinell7"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="150dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:gravity="bottom"
                        android:text="@string/roundThree"
                        android:textAlignment="center"
                        android:textColor="#748290"
                        android:textSize="22sp" />

                    <TextView
                        android:layout_width="150dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:gravity="top"
                        android:text="10:00 AM"
                        android:textAlignment="center"
                        android:textColor="#3D4C5C"
                        android:textSize="16sp" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/timelinell8"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="150dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:gravity="bottom"
                        android:text="@string/lunch"
                        android:textAlignment="center"
                        android:textColor="#748290"
                        android:textSize="22sp" />

                    <TextView
                        android:layout_width="150dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:gravity="top"
                        android:text="1:00 PM"
                        android:textAlignment="center"
                        android:textColor="#3D4C5C"
                        android:textSize="16sp" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/timelinell9"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="150dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:gravity="bottom"
                        android:text="@string/roundFour"
                        android:textAlignment="center"
                        android:textColor="#748290"
                        android:textSize="22sp" />

                    <TextView
                        android:layout_width="150dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:gravity="top"
                        android:text="3:00 PM"
                        android:textAlignment="center"
                        android:textColor="#3D4C5C"
                        android:textSize="16sp" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/timelinell10"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="150dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:gravity="bottom"
                        android:text="@string/breakEnd"
                        android:textAlignment="center"
                        android:textColor="#748290"
                        android:textSize="22sp" />

                    <TextView
                        android:layout_width="150dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:gravity="top"
                        android:text="4:00 PM"
                        android:textAlignment="center"
                        android:textColor="#3D4C5C"
                        android:textSize="16sp" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/timelinell11"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="150dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:gravity="bottom"
                        android:text="@string/breakEnd"
                        android:textAlignment="center"
                        android:textColor="#FFFFFF"
                        android:textSize="22sp"
                        android:visibility="invisible" />

                    <TextView
                        android:layout_width="150dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:gravity="top"
                        android:text="4:00 PM"
                        android:textAlignment="center"
                        android:textColor="#3D4C5C"
                        android:textSize="16sp"
                        android:visibility="invisible" />
                </LinearLayout>
            </LinearLayout>
        </HorizontalScrollView>

        <TextView
            android:id="@+id/timelineUpNext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:text="Up Next"
            android:textColor="#748290"
            android:textSize="30sp"
            app:layout_constraintBottom_toTopOf="@+id/horizontalScrollView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>